[FEATURE] implementation jwt token for authentication and authorization, also user scope
