# controller/todolist_controller.go
@@ -4,8 +4,10 @@ import (
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"strconv"
+	"todolist/exception"
 	"todolist/helper"
 	"todolist/model/dto"
+	"todolist/model/middleware"
 	"todolist/service"
 )
 
@@ -15,6 +17,7 @@ type TodolistController interface {
 	Delete(ctx *gin.Context)
 	FindAll(ctx *gin.Context)
 	FindById(ctx *gin.Context)
+	CheckTodolist(ctx *gin.Context)
 }
 
 type TodolistControllerImpl struct {
@@ -31,15 +34,31 @@ func (controller *TodolistControllerImpl) Create(ctx *gin.Context) {
 	err := ctx.BindJSON(&createdTodolist)
 	helper.PanicIfError(err)
 
-	todolistResponse := controller.todolistService.Create(ctx, createdTodolist)
-
-	success := dto.WebResponse{
-		Code:   http.StatusOK,
-		Status: "OK",
-		Data:   todolistResponse,
+	value, exists := ctx.Get("currentUser")
+	if !exists {
+		panic(exception.NewUnauthorizedError("User not found"))
 	}
 
-	ctx.JSON(http.StatusOK, success)
+	currentUser := value.(middleware.AuthClaimJWT)
+	createdTodolist.UserId = currentUser.UserId
+
+	for _, scope := range currentUser.Scopes {
+		if scope == "todos:create" {
+			todolistResponse := controller.todolistService.Create(ctx, createdTodolist)
+
+			success := dto.WebResponse{
+				Code:   http.StatusOK,
+				Status: "OK",
+				Data:   todolistResponse,
+			}
+
+			ctx.JSON(http.StatusOK, success)
+
+			return
+		}
+	}
+
+	panic(exception.NewForbiddenError("You don't have permission to create todolist"))
 }
 
 func (controller *TodolistControllerImpl) Update(ctx *gin.Context) {
@@ -54,15 +73,29 @@ func (controller *TodolistControllerImpl) Update(ctx *gin.Context) {
 
 	updatedTodolist.Id = id
 
-	todolistResponse := controller.todolistService.Update(ctx, updatedTodolist)
-
-	response := dto.WebResponse{
-		Code:   http.StatusOK,
-		Status: "OK",
-		Data:   todolistResponse,
+	value, exists := ctx.Get("currentUser")
+	if !exists {
+		panic(exception.NewUnauthorizedError("User not found"))
 	}
 
-	ctx.JSON(http.StatusOK, response)
+	currentUser := value.(middleware.AuthClaimJWT)
+	updatedTodolist.UserId = currentUser.UserId
+
+	for _, scope := range currentUser.Scopes {
+		if scope == "todos:update" {
+			todolistResponse := controller.todolistService.Update(ctx, updatedTodolist)
+
+			response := dto.WebResponse{
+				Code:   http.StatusOK,
+				Status: "OK",
+				Data:   todolistResponse,
+			}
+
+			ctx.JSON(http.StatusOK, response)
+			return
+		}
+	}
+	panic(exception.NewForbiddenError("You don't have permission to update todolist"))
 }
 
 func (controller *TodolistControllerImpl) Delete(ctx *gin.Context) {
@@ -72,27 +105,57 @@ func (controller *TodolistControllerImpl) Delete(ctx *gin.Context) {
 	id, err := strconv.Atoi(todolistId)
 	helper.PanicIfError(err)
 
-	controller.todolistService.Delete(ctx, id)
-
-	response := dto.WebResponse{
-		Code:   http.StatusOK,
-		Status: "OK",
-		Data:   deletedTodolist,
+	var userId int
+	value, exists := ctx.Get("currentUser")
+	if !exists {
+		panic(exception.NewUnauthorizedError("User not found"))
 	}
 
-	ctx.JSON(http.StatusOK, response)
+	currentUser := value.(middleware.AuthClaimJWT)
+	userId = currentUser.UserId
+
+	for _, scope := range currentUser.Scopes {
+		if scope == "todos:delete" {
+			controller.todolistService.Delete(ctx, id, userId)
+
+			response := dto.WebResponse{
+				Code:   http.StatusOK,
+				Status: "OK",
+				Data:   deletedTodolist,
+			}
+
+			ctx.JSON(http.StatusOK, response)
+			return
+		}
+	}
+	panic(exception.NewForbiddenError("You don't have permission to delete todolist"))
 }
 
 func (controller *TodolistControllerImpl) FindAll(ctx *gin.Context) {
-	todolistResponse := controller.todolistService.GetAll(ctx)
-
-	response := dto.WebResponse{
-		Code:   http.StatusOK,
-		Status: "OK",
-		Data:   todolistResponse,
+	var userId int
+	value, exists := ctx.Get("currentUser")
+	if !exists {
+		panic(exception.NewUnauthorizedError("User not found"))
 	}
 
-	ctx.JSON(http.StatusOK, response)
+	currentUser := value.(middleware.AuthClaimJWT)
+	userId = currentUser.UserId
+
+	for _, scope := range currentUser.Scopes {
+		if scope == "todos:read" {
+			todolistResponse := controller.todolistService.GetAll(ctx, userId)
+
+			response := dto.WebResponse{
+				Code:   http.StatusOK,
+				Status: "OK",
+				Data:   todolistResponse,
+			}
+
+			ctx.JSON(http.StatusOK, response)
+			return
+		}
+	}
+	panic(exception.NewForbiddenError("You don't have permission to read todolist"))
 }
 
 func (controller *TodolistControllerImpl) FindById(ctx *gin.Context) {
@@ -100,13 +163,65 @@ func (controller *TodolistControllerImpl) FindById(ctx *gin.Context) {
 	id, err := strconv.Atoi(todolistId)
 	helper.PanicIfError(err)
 
-	todolistResponse := controller.todolistService.GetById(ctx, id)
-
-	response := dto.WebResponse{
-		Code:   http.StatusOK,
-		Status: "OK",
-		Data:   todolistResponse,
+	var userId int
+	value, exists := ctx.Get("currentUser")
+	if !exists {
+		panic(exception.NewUnauthorizedError("User not found"))
 	}
 
-	ctx.JSON(http.StatusOK, response)
+	currentUser := value.(middleware.AuthClaimJWT)
+	userId = currentUser.UserId
+
+	for _, scope := range currentUser.Scopes {
+		if scope == "todos:read" {
+			todolistResponse := controller.todolistService.GetById(ctx, id, userId)
+
+			response := dto.WebResponse{
+				Code:   http.StatusOK,
+				Status: "OK",
+				Data:   todolistResponse,
+			}
+
+			ctx.JSON(http.StatusOK, response)
+			return
+		}
+	}
+	panic(exception.NewForbiddenError("You don't have permission to read todolist"))
+}
+
+func (controller *TodolistControllerImpl) CheckTodolist(ctx *gin.Context) {
+	todolistId := ctx.Param("id")
+	id, err := strconv.Atoi(todolistId)
+	helper.PanicIfError(err)
+
+	var checkRequest dto.CheckTodolistRequest
+	err = ctx.BindJSON(&checkRequest)
+	if err != nil {
+		panic("Error when binding JSON")
+	}
+
+	var userId int
+	value, exists := ctx.Get("currentUser")
+	if !exists {
+		panic(exception.NewUnauthorizedError("User not found"))
+	}
+
+	currentUser := value.(middleware.AuthClaimJWT)
+	userId = currentUser.UserId
+
+	for _, scope := range currentUser.Scopes {
+		if scope == "todos:update" {
+			todolistResponse := controller.todolistService.CheckTodolist(ctx, checkRequest, id, userId)
+
+			response := dto.WebResponse{
+				Code:   http.StatusOK,
+				Status: "OK",
+				Data:   todolistResponse,
+			}
+
+			ctx.JSON(http.StatusOK, response)
+			return
+		}
+	}
+	panic(exception.NewForbiddenError("You don't have permission to check todolist"))
 }
